lesson/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
    - name: curl
      image: tutum/curl
      command: ["sleep", "9999999"]
