lesson/deployment-fortuneloop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune 
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fortune
  template:
    metadata:
      labels:
        name: fortune
    spec:
      containers:
      - name: fortune
        image: docaleks123/fortune
        resources:
          limits:
            cpu: 150m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi 
        volumeMounts:
        - name: html
          mountPath: /var/htdocs
        securityContext:
          runAsUser: 0
          allowPrivilegeEscalation: false
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: html
        emptyDir: {}
      securityContext:
        runAsNonRoot: false
