lesson/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: some.somecompany.com
  selector:
    app: kubia
  ports:
    - name: http-80
      port: 80
