lesson/fortuneloop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: fortune
  type: LoadBalancer
  sessionAffinity: ClientIP
