lesson/kubia-svc-headles.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headles
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: kubia
