lesson/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - nodeport: 31000
    port: 8080
    targetPort: 8080
  selector:
    name: kubia
  type: NodePort
