lesson/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
  - name: http-80
    port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: kubia
