lesson/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - name: http-80
    port: 80
    targetPort: 8080
  selector:
    app: kubia
