lesson/ingress-fortune.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune
spec:
  rules:
  - host: fortune.example.com
    http:
      paths:
      - backend:
          service:
            name: fortune
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - fortune.example.com
    secretName: tls-secret
