lesson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: kubia
            port:
              number: 80
